samples/_failures_safe/1761500967_9d54c8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_12918d2a.c: In function ‘main’:
./samples/SAFE/__tmp_12918d2a.c:149:34: error: missing terminating " character
  149 |             mat2.rows = read_int("Enter rows for second
      |                                  ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_12918d2a.c:149:13: error: expected expression at end of input
  149 |             mat2.rows = read_int("Enter rows for second
      |             ^~~~
./samples/SAFE/__tmp_12918d2a.c:149:25: error: too few arguments to function ‘read_int’
  149 |             mat2.rows = read_int("Enter rows for second
      |                         ^~~~~~~~
./samples/SAFE/__tmp_12918d2a.c:15:5: note: declared here
   15 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_12918d2a.c:149:13: error: expected declaration or statement at end of input
  149 |             mat2.rows = read_int("Enter rows for second
      |             ^~~~
./samples/SAFE/__tmp_12918d2a.c:149:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_12918d2a.c:149:13: error: expected declaration or statement at end of input
